# jamestmartin.me

./: .editorconfig  .gitignore  .gitmodules  Gemfile  Main.hs~  README.md  RobotsTxt.hs  SitemapXml.hs  SitemapXml.hs~  _config.yml  about.hs  article.php  build-site-no-sitemap.sh  build-site.sh  build-templates.sh  character.xhtml  contact.html  dscs-spec.md  index-old.xhtml  index.hs  index.html  index.xhtml  index.xhtml.old  index.xhtml~  key.pgp  likes.html  meme.html  menukill.xhtml  nginx.conf  old-resume.xhtml  package-lock.json  ranks.txt  resume.docx  resume.odt  resume.tex  resume.xhtml  resume2.txt  resume3.docx  robots.rkt~  robots.txt  (+8 more)
_layouts/: default.html  resume.html  simple.html
about/: index.hs
articles/beyond-operating-systems/: index.xhtml
assets/: resume.css  style.css
assets/css/: resume.css  style.css
assets/style/: default.css
contact/: index.hs
gow/: index.hs
lore/: knowledge.xhtml  smell.xhtml
projects/: index.hs  index.html  minecraft-clone.html  the-mining-dead.html
res/: character.css  character.js  common.css  common.css.old  common.css~  common.js  style.css
resume/: index.html  index.tex  resume.tex  software-developer.html  web-developer.html  web-developer.tex
rkt/: robots.rkt  site.rkt  sitemap.rkt  web.rkt
scr/: leksah0.txt  leksah1.txt  leksah3.txt
switte/: index.xhtml  index.xhtml~
switte/community/: index.xhtml  index.xhtml~
switte/documentation/: index.xhtml  index.xhtml~
templates/: stack.yaml  templates.cabal
templates/src/: Templates.hs
templates/src/Templates/: Icons.hs  Urls.hs
(+2 files in other folders)
