name:                templates
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lijerom/jtmar.me
license:             GPL-3
--license-file:        LICENSE
author:              James Martin
maintainer:          james@jtmar.me
copyright:           2018 James Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  hs-source-dirs:	src
  default-language:	Haskell2010
  exposed-modules:
      Templates
    , Templates.Icons
    , Templates.Urls
  build-depends:
      base >=4.7 && <5
    , html-generator
